--- a/src/index.html
+++ b/src/index.html
@@ -18,7 +18,7 @@
       rel="stylesheet"
     />
   </head>
-  <body class="font-sans">
+  <body class="font-sans text-gray-200">
     <app-root></app-root>
   </body>
 </html>
